--- a/thesis/implementation/events.tex
+++ b/thesis/implementation/events.tex
@@ -1,3 +1,5 @@
+Po stronie przeglądarki przechwytywane są wszystkie zdarzenia myszy oraz klawiatury. Każde zdarzenie jest zamieniane na obiekt \emph{JSON} i wysyłane do serwera przy użyciu \emph{Websocket}. Dodatkowo przesyłane są zdarzenia dotyczące manipulacji oknami -- zdarzenia zmiany rozmiary, zamknięcia oraz aktywacji okna. W ten sposób z poziomu przeglądarki możliwa jest całkowita kontrola aplikacji.
+
 \subsection{Zdarzenia myszy}
 \input{implementation/events/mouse.tex}
 
