--- a/thesis/implementation/render/ellipse.tex
+++ b/thesis/implementation/render/ellipse.tex
@@ -11,3 +11,24 @@ virtual void QPaintEngine::drawEllipse( const QRect & rect );
   "h":10.0       // Srednica pionowa
 }
 \end{lstlisting}
+
+Pełna implementacja za pomocą krzywych Beziera.
+Kod implementacji:
+
+\begin{lstlisting}[language=JavaScript,numbers=none]
+// ctx - konteks canvas, x,y,w,h - jak w JSON
+var kappa = .5522848;
+var ox = (w / 2) * kappa,
+  oy = (h / 2) * kappa,
+  xe = x + w,
+  ye = y + h,
+  xm = x + w / 2,
+  ym = y + h / 2;
+ctx.beginPath();
+ctx.moveTo(x, ym);
+ctx.bezierCurveTo(x, ym - oy, xm - ox, y, xm, y);
+ctx.bezierCurveTo(xm + ox, y, xe, ym - oy, xe, ym);
+ctx.bezierCurveTo(xe, ym + oy, xm + ox, ye, xm, ye);
+ctx.bezierCurveTo(xm - ox, ye, x, ym + oy, x, ym);
+ctx.closePath();
+\end{lstlisting}
