--- a/thesis/implementation/render/image.tex
+++ b/thesis/implementation/render/image.tex
@@ -18,3 +18,5 @@ virtual void QPaintEngine::drawTiledPixmap( const QRectF & rect,
   "y":0.0                    // Pozycja Y
 }
 \end{lstlisting}
+
+Pełna implementacja, natywnie wspierane w \emph{canvas} za pomocą metody drawImage.
