--- a/thesis/implementation/render/path.tex
+++ b/thesis/implementation/render/path.tex
@@ -16,3 +16,5 @@ virtual void QPaintEngine::drawPath( const QPainterPath & path );
            // http://doc.qt.digia.com/stable/qt.html#FillRule-enum
 }
 \end{lstlisting}
+
+Pełna implementacja, natywnie wspierane w \emph{canvas} za pomocą metod \emph{lineTo}, \emph{lineTo}, \emph{quadraticCurveTo} oraz \emph{bezierCurveTo}.
