--- a/thesis/implementation/render/point.tex
+++ b/thesis/implementation/render/point.tex
@@ -16,3 +16,5 @@ virtual void QPaintEngine::drawPoints( const QPoint * points,
     ]
 },
 \end{lstlisting}
+
+Pełna implementacja, natywnie wspierane w \emph{canvas}, za pomocą \emph{strokeRect} rysowany jest kwadrat o rozmiarach 1 na 1 piksel.
