--- a/thesis/implementation/render/polygon.tex
+++ b/thesis/implementation/render/polygon.tex
@@ -22,3 +22,5 @@ virtual void QPaintEngine::drawPolygon( const QPoint * points,
     ]
 }
 \end{lstlisting}
+
+Pełna implementacja, natywnie wspierane w \emph{canvas} za pomocą metod \emph{moveTo}, \emph{lineTo} oraz \emph{closePath}.
