--- a/thesis/implementation/render/rectangle.tex
+++ b/thesis/implementation/render/rectangle.tex
@@ -13,3 +13,5 @@ virtual void QPaintEngine::drawRects( const QRect * rects,
   "h":10.0      // Wysokosc
 }
 \end{lstlisting}
+
+Pełna implementacja, natywnie wspierane w \emph{canvas} za pomocą metody \emph{fillRect}.
