--- a/thesis/implementation/render/text.tex
+++ b/thesis/implementation/render/text.tex
@@ -19,3 +19,5 @@ virtual void QPaintEngine::drawTextItem( const QPointF & p,
   }
 }
 \end{lstlisting}
+
+Pełna implementacja, natywnie wspierane w \emph{canvas}. Dokładny opis obsługi w podrozdziale dotyczącym pędzla.
