--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -98,7 +98,7 @@ W rodziale tym przedstawione zostaną najważniejsze informacje dotyczące techn
 \chapter{Implementacja}
 \section{Renderowanie}
 \input{implementation/render.tex}
-\section{Zdarzenia}
+\section{Zdarzenia po stronie klienta}
 \input{implementation/events.tex}
 
 \section{Szczegóły implementacji po stronie serwera}
@@ -108,6 +108,7 @@ W rodziale tym przedstawione zostaną najważniejsze informacje dotyczące techn
 \section{Szczegóły implementacji po stronie klienta}
 \input{implementation/client_details.tex}
 
+\label{sec:napotkane_problemy}
 \section{Napotkane problemy}
 \input{implementation/problems.tex}
 
