--- a/thesis/implementation/render/line.tex
+++ b/thesis/implementation/render/line.tex
@@ -13,3 +13,5 @@ virtual void QPaintEngine::drawLines( const QLine * lines,
   "ye":10.0    // Pozycja koncowa Y
 }
 \end{lstlisting}
+
+Pełna implementacja, natywnie wspierane w \emph{canvas} za pomocą metod \emph{moveTo} oraz \emph{lineTo}.
