Thesis: "Problem renderowania & fixy"

--- a/thesis/implementation/client_details.tex
+++ b/thesis/implementation/client_details.tex
@@ -9,7 +9,7 @@ Podczas pracy z projektem zostały wykorzystane popularne biblioteki ułatwiają
 
 
 \subsection{Połączenie}
-Klient po załadowaniu początkowej strony dokonuje połączenia WebSocket z serwerem na port podany na stronie. Następnie nasłuchuje na informacje od serwera i na każdą z nich reaguje. Komunikaty w formacie JSON w drugą stronę wysyłane są po zajściu zdarzeń po stronie klienta, np. ruchu myszą. Dokładny opis zdarzeń znajduję się w sekcji TODO - link do dodatku/sekcji
+Klient po załadowaniu początkowej strony dokonuje połączenia WebSocket z serwerem na port podany na stronie. Następnie nasłuchuje na informacje od serwera i na każdą z nich reaguje. Komunikaty w formacie JSON w drugą stronę wysyłane są po zajściu zdarzeń po stronie klienta, np. ruchu myszą. Dokładny opis zdarzeń znajduję się w sekcji \ref{client_events}.
 
 \subsection{Window manager (ang. zarządca okien)}
 Typowe programy komputerowe składaja się z wielu okien. Sposób implementacji pseudookien i zarządcy w projekcie był możliwy na dwa sposoby.
