--- a/thesis/implementation/events/keyboard.tex
+++ b/thesis/implementation/events/keyboard.tex
@@ -1,3 +1,13 @@
+W zdarzeniach klawiatury używane są następujące pola:
+\begin{itemize}
+\item type -- typ zdarzenia,
+\item key -- kod klawisza
+\item text -- ciąg znaków będący rezultatem zdarzenia
+\item autorep -- wartość logiczna określająca, czy zdarzenie jest wynikiem przytrzymania klawisza
+\item count -- ilość powtórzeń
+\item modifiers -- analogicznie jak w przypadku zdarzeń myszy
+\end{itemize}
+
 \subsubsection{Wciśnięcie klawisza}
 \begin{lstlisting}[language=JavaScript,numbers=none]
 {
