--- a/thesis/problem_definition/problem_definition.tex
+++ b/thesis/problem_definition/problem_definition.tex
@@ -3,7 +3,7 @@
 // TODO: Zachowanie systemu / software'u
 // TODO: Struktura systemu / software'u
 
-Przedmiotem pracy jest stworzenie prototypowego serwera hostującego desktopowe aplikacjie oparte o biblioteki Qt oraz KDE. Na żądanie klienta serwer uruchamia wybraną aplikację oraz wstrzykuje kod odpowiedzialny za komunikację klienta z procesem aplikacji i przesyłanie klientowi danych dotyczących wyglądu graficznego interfejsu aplikacji. 
+Przedmiotem pracy jest stworzenie prototypowego serwera hostującego desktopowe aplikacjie oparte o biblioteki \emph{Qt} oraz KDE. Na żądanie klienta serwer uruchamia wybraną aplikację oraz wstrzykuje kod odpowiedzialny za komunikację klienta z procesem aplikacji i przesyłanie klientowi danych dotyczących wyglądu graficznego interfejsu aplikacji. 
 
 Postawione zadanie w głównej mierze polega na rozwiązaniu trzech podstawowych problemów:
 \begin{enumerate}
