Thesis: "Zmiana nagwkw w akapicie o renderowaniu"

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -97,6 +97,8 @@ W rodziale tym przedstawione zostaną najważniejsze informacje dotyczące techn
 \chapter{Implementacja}
 \section{Renderowanie}
 \input{implementation/render.tex}
+\section{Protokół wymiany danych}
+\input{implementation/render_client.tex}
 \section{Zdarzenia po stronie klienta}
 \label{client_events}
 \input{implementation/events.tex}
