Thesis: "Render server v1"

--- a/thesis/implementation/render.tex
+++ b/thesis/implementation/render.tex
@@ -1,1 +1,3 @@
-|| TODO: POJEDYNCZY CYKL RENDEROWANIA.
+Renderowanie jest operacją realizowaną za każdym razem gdy wykrywa zostania zmiana dowolnego elementu interfejsu użytkownika. W standardowej aplikacji do kolejki zdarzeń trafia informacja o konieczności odświeżenia widoku aby w kolejnym kroku narysować odświeżany element na ekranie. 
+
+W niniejszej pracy ze względu na konieczność rysowania interfejsu aplikacji na zdalnej maszynie konieczne jest przechwycenie informacji z kolejki zdarzeń o zmianie parametrów widgeta oraz utworzenie opisu jego wyglądu w wykorzystywanym formacie wymiany informacji. Szczegóły struktur danych, ich opis oraz sposobu przetwarzania został opisany w sekcji \ref{data_protocol}.
