--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -98,6 +98,7 @@ W rodziale tym przedstawione zostaną najważniejsze informacje dotyczące techn
 \section{Renderowanie}
 \input{implementation/render.tex}
 \section{Protokół wymiany danych}
+\label{data_protocol}
 \input{implementation/render_client.tex}
 \section{Zdarzenia po stronie klienta}
 \label{client_events}
