--- a/thesis/addons/addons.tex
+++ b/thesis/addons/addons.tex
@@ -1,7 +1,6 @@
 \section{Kod klienta}
 
-\label{lst:addons_keyboard_method}
-\begin{lstlisting}[language=JavaScript,numbers=none,caption=Fragment metody translacji kodów klawiatury]
+\begin{lstlisting}[language=JavaScript,numbers=left,caption={Fragment metody translacji kodów klawiatury},label={lst:addons_keyboard_method}]
     switch (evt.keyCode) {
         case KeyboardEvent.DOM_VK_BACK_SPACE:
             data.key = 0x01000003;
