--- a/thesis/implementation/render/ellipse.tex
+++ b/thesis/implementation/render/ellipse.tex
@@ -15,7 +15,7 @@ virtual void QPaintEngine::drawEllipse( const QRect & rect );
 Pełna implementacja za pomocą krzywych Beziera.
 Kod implementacji:
 
-\begin{lstlisting}[language=JavaScript,numbers=none]
+\begin{lstlisting}[language=JavaScript,numbers=left]
 // ctx - konteks canvas, x,y,w,h - jak w JSON
 var kappa = .5522848;
 var ox = (w / 2) * kappa,
